--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "backbone": "^1.1.2",
     "backbone-react-component": "^0.7.3",
     "bootstrap": "^3.3.2",
+    "gulp-less": "^3.0.0",
+    "less": "^2.4.0",
     "react": "^0.12.2",
     "react-router": "~0.12.0",
     "reactify": "~1.0.0",
@@ -15,7 +17,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-less": "~2.0.2",
+    "gulp-less": "^3.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "~1.3.0",
     "gulp-uglify": "~1.1.0",
