--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "backbone-react-component": "^0.7.3",
     "bootstrap": "^3.3.2",
     "gulp-less": "^3.0.0",
+    "jquery": "^2.1.3",
     "less": "^2.4.0",
     "react": "^0.12.2",
     "react-router": "~0.12.0",
