--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "~0.12.0",
     "reactify": "~1.0.0",
     "reflux": "^0.2.5",
+    "superagent": "^0.21.0",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
