--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "description": "ReactJS + Reflux TodoMVC example with a Gulp + Browserify build process.",
   "dependencies": {
-    "backbone": "^1.1.2",
-    "backbone-react-component": "^0.7.3",
     "bootstrap": "^3.3.2",
     "gulp-less": "^3.0.0",
     "jquery": "^2.1.3",
@@ -14,7 +12,8 @@
     "reactify": "~1.0.0",
     "reflux": "^0.2.5",
     "superagent": "^0.21.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "wordpress-rest-api": "^0.4.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
