--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.2",
     "bootswatch": "^3.3.2",
+    "font-awesome": "^4.3.0",
     "gulp-less": "^3.0.0",
     "jquery": "^2.1.3",
     "less": "^2.4.0",
