--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "wordpress-rest-api": "^0.4.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.6.11",
+    "browserify": "^8.1.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-less": "^3.0.0",
@@ -23,7 +25,6 @@
     "gulp-sourcemaps": "~1.3.0",
     "gulp-uglify": "~1.1.0",
     "gulp-util": "^3.0.3",
-    "browserify": "^8.1.3",
     "require-dir": "^0.1.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.0.0",
